tests/machine/x/fs/match_full.error
F# Compiler for F# 4.0 (Open Source Edition)
Freely distributed under the Apache 2.0 Open Source License

/workspace/mochi/tests/machine/x/fs/match_full.fs(5,5): warning FS0058: Possible incorrect indentation: this token is offside of context started at position (4:18). Try indenting this token further or using standard formatting conventions.

/workspace/mochi/tests/machine/x/fs/match_full.fs(12,5): warning FS0058: Possible incorrect indentation: this token is offside of context started at position (11:17). Try indenting this token further or using standard formatting conventions.

/workspace/mochi/tests/machine/x/fs/match_full.fs(19,5): warning FS0058: Possible incorrect indentation: this token is offside of context started at position (18:19). Try indenting this token further or using standard formatting conventions.

/workspace/mochi/tests/machine/x/fs/match_full.fs(5,12): error FS0001: This expression was expected to have type
    obj    
but here has type
    string    

/workspace/mochi/tests/machine/x/fs/match_full.fs(6,12): error FS0001: This expression was expected to have type
    obj    
but here has type
    string    

/workspace/mochi/tests/machine/x/fs/match_full.fs(7,12): error FS0001: This expression was expected to have type
    obj    
but here has type
    string    

/workspace/mochi/tests/machine/x/fs/match_full.fs(8,12): error FS0001: This expression was expected to have type
    obj    
but here has type
    string    

/workspace/mochi/tests/machine/x/fs/match_full.fs(12,16): error FS0001: This expression was expected to have type
    obj    
but here has type
    string    

/workspace/mochi/tests/machine/x/fs/match_full.fs(13,16): error FS0001: This expression was expected to have type
    obj    
but here has type
    string    

/workspace/mochi/tests/machine/x/fs/match_full.fs(14,16): error FS0001: This expression was expected to have type
    obj    
but here has type
    string    

/workspace/mochi/tests/machine/x/fs/match_full.fs(15,12): error FS0001: This expression was expected to have type
    obj    
but here has type
    string    

/workspace/mochi/tests/machine/x/fs/match_full.fs(19,15): error FS0001: This expression was expected to have type
    obj    
but here has type
    string    

/workspace/mochi/tests/machine/x/fs/match_full.fs(20,16): error FS0001: This expression was expected to have type
    obj    
but here has type
    string    
